Add some labels and some CSS
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/ecomments/trunk@83409 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -31,6 +31,14 @@
 				<source>Limit</source>
 				<target>Limit</target>
 			</trans-unit>
+			<trans-unit id="saidOn" xml:space="preserve">
+				<source>said on</source>
+				<target>sagte am</target>
+			</trans-unit>
+			<trans-unit id="saidAt" xml:space="preserve">
+				<source>at</source>
+				<target>um</target>
+			</trans-unit>
 			<trans-unit id="formfield_name" xml:space="preserve">
 				<source>Name</source>
 				<target>Name</target>
