--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -27,6 +27,12 @@
 			<trans-unit id="tx_ecomments_enable_comments.tx_ecomments_comments" xml:space="preserve">
 				<source>Comments</source>
 			</trans-unit>
+			<trans-unit id="saidOn" xml:space="preserve">
+				<source>said on</source>
+			</trans-unit>
+			<trans-unit id="saidAt" xml:space="preserve">
+				<source>at</source>
+			</trans-unit>
 			<trans-unit id="formfield_name" xml:space="preserve">
 				<source>Name</source>
 			</trans-unit>
@@ -49,10 +55,10 @@
 				<source>This comment is to short!</source>
 			</trans-unit>
 			<trans-unit id="leave_comment_article" xml:space="preserve">
-				<source>Leave a Comment on this Article</source>
+				<source>Leave a comment on this article</source>
 			</trans-unit>
 			<trans-unit id="leave_comment_page" xml:space="preserve">
-				<source>Leave a Comment on this site</source>
+				<source>Leave a comment on this site</source>
 			</trans-unit>
 			<trans-unit id="last_comments" xml:space="preserve">
 				<source>Last comments</source>
